--- a/style.css
+++ b/style.css
@@ -1,4 +1,203 @@
-body * {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 30px;
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0px;
 }
+
+body {
+  /* background-image: url('img.jpg');
+  width: 100%; */
+  position: relative
+}
+
+.background-cover {
+  position: relative;
+  border:0;
+  /* width: 100%; */
+  /* z-index: -1; */
+}
+
+.img {
+  width: 100%;
+  z-index: -1;
+  position: relative;
+  overflow: hidden;
+  border:0;
+}
+
+.navigation {
+  width: 100%;
+  background-color: white;
+  position: fixed;
+  /* text-align: right; */
+  /* display: block; */
+  /* float: right; */
+  z-index: +2;
+  box-shadow: 2px 5px 10px gray;
+}
+
+
+.topnav {
+  float: right;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 45px;
+  text-decoration: none;
+  font-size: 17px;
+  font-weight: bold;
+  /* border: solid silver 1px; */
+
+}
+
+.topnav a:hover {
+  background-color: black;
+  color: white;
+}
+
+
+.icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a {display: none;}
+  .icon {
+    float: right;
+    display: block;
+  }
+
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    width: 47%;
+    float: left;
+    background-color: white;
+  }
+
+  .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 14px 45px;
+    color: black;
+    font-size: 18px;
+  }
+
+  .topnav.responsive a {
+    /* float: left; */
+    display: block;
+    /* font-size: 10px;
+    padding: 5px 50px; */
+    /* text-align: left; */
+    /* color: black; */
+  }
+
+  .background-cover {
+    width: 100%;
+  }
+}
+
+
+.textfield {
+  color: white;
+  font-size: 2vw;
+  display: block;
+  position: absolute;
+  top: 15vw;
+  left: 5vw;
+  width: 50%;
+  height: 50%;
+  max-height: inherit;
+  box-sizing: border-box
+}
+
+.resume {
+  box-shadow: 10px 10px 5px black;
+  font-size: 1.5vw;
+  color: black;
+  border: white;
+  background-color: white;
+  position: absolute;
+  z-index: +1;
+  top: 28vw;
+  left: 20vw;
+  padding: 1vw;
+  cursor: pointer;
+  background-color: white;
+  vertical-align: center;
+  max-height: inherit;
+  background-color: white;
+
+  background: linear-gradient(to right, black 50%, white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all .3s ease-out;
+}
+
+.resume:hover {
+  background-color: black;
+  color: white;
+  box-shadow: 10px 10px 5px grey;
+  background-position: left bottom;
+}
+
+
+.skills {
+  /* background-color: antiquewhite; */
+  /* background-color: #ddd; */
+  position: relative;
+  width: 100%;
+  height: 40vw;
+  margin: 0px;
+  border:0;
+}
+
+.mh-promo {
+  font-size: 18px;
+  padding: 7px;
+  background-color: antiquewhite;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+  width: 100px;
+}
+
+
+.txt1 {
+  background-color: black;
+  color: white;
+  padding-left: 5px;
+}
+
+.txt2 {
+  font-size: 4.5vw;
+  padding-left: 3px;
+}
+
+.skilltext {
+  /* background-color: white; */
+  /* border: solid white 10px; */
+  font-size: 2.5vw;
+  text-align: center;
+  position: absolute;
+  /* left: 45%; */ 
+  /* float: center; */
+  /* margin: 0 auto*/
+}
+
+.skilltext:hover{
+  background-color: black;
+  color: white;
+}
+
+.logos {
+  font-size: 80px;
+  text-align: center;
+}
+
+
