--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
   margin: 0px;
 }
 
+
+/* 
 body {
-  /* background-image: url('img.jpg');
-  width: 100%; */
+  width: 100%; 
   position: relative
-}
+} */
 
 .background-cover {
-  position: relative;
+  /* position: relative; */
   border:0;
   /* width: 100%; */
   /* z-index: -1; */
@@ -20,7 +21,7 @@ body {
   width: 100%;
   z-index: -1;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   border:0;
 }
 
@@ -49,6 +50,7 @@ body {
   text-decoration: none;
   font-size: 17px;
   font-weight: bold;
+  z-index: +3;
   /* border: solid silver 1px; */
 
 }
@@ -56,6 +58,11 @@ body {
 .topnav a:hover {
   background-color: black;
   color: white;
+  cursor: pointer;
+}
+
+.topnav a.active {
+  text-decoration: underline;
 }
 
 
@@ -150,7 +157,8 @@ body {
 .skills {
   /* background-color: antiquewhite; */
   /* background-color: #ddd; */
-  position: relative;
+  /* position: relative; */
+  padding-top: 60px;
   width: 100%;
   height: 40vw;
   margin: 0px;
@@ -172,6 +180,7 @@ body {
   background-color: black;
   color: white;
   padding-left: 5px;
+  top: 5%;
 }
 
 .txt2 {
@@ -184,7 +193,7 @@ body {
   /* border: solid white 10px; */
   font-size: 2.5vw;
   text-align: center;
-  position: absolute;
+  /* position: absolute; */
   /* left: 45%; */ 
   /* float: center; */
   /* margin: 0 auto*/
