--- a/Old version/style.css
+++ b/Old version/style.css
@@ -4,12 +4,6 @@
 }
 
 
-body {
-  background-color: #f5f5f5;
-  color: #4e4e4e;
-}
-
-
 .background-cover {
   /* position: relative; */
   border:0;
@@ -198,6 +192,7 @@ body {
   /* border: solid white 10px; */
   font-size: 2.5vw;
   text-align: center;
+  margin-bottom: 50px;
   /* position: absolute; */
   /* left: 45%; */ 
   /* float: center; */
